<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    android:padding="5dp">

    <ImageView
        android:id="@+id/playlistThumbnailImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="24dp"
        app:srcCompat="@drawable/play"
        android:contentDescription="@string/playlist_thumbnail_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recyclerViewTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recyclerViewTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_title"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewArtistTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playlistThumbnailImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recyclerViewArtistTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_artist"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>