<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadingActivity">

    <ImageView
        android:id="@+id/rippleAnimationImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/ring"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loadingTextView"
        android:contentDescription="@string/ripple_animation_image_description" />

    <ImageView
        android:id="@+id/loadingImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:srcCompat="@drawable/launcher_icon"
        android:layout_marginTop="150dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loadingTextView"
        android:contentDescription="@string/loading_image_description" />

    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"
        android:layout_marginBottom="150dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/loadingImageView"
        app:layout_constraintEnd_toEndOf="@id/loadingImageView"
        app:layout_constraintTop_toBottomOf="@id/loadingImageView"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>