<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/currentMusicNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_music_number"
            android:textSize="16sp"
            android:singleLine="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/menuButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/settings"
            android:onClick="preferencesMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/albumArtImage"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/image_description"
            android:elevation="10dp"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/currentSeekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/default_duration"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/musicTitleTextBox"
            app:layout_constraintEnd_toStartOf="@id/durationSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumArtImage" />
        <SeekBar
            android:id="@+id/durationSeekBar"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@id/musicTitleTextBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumArtImage" />
        <TextView
            android:id="@+id/maxSeekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/default_duration"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/musicTitleTextBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/durationSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/albumArtImage" />
        <TextView
            android:id="@+id/musicTitleTextBox"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="48dp"
            android:background="@android:color/transparent"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/default_title"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/repeatButton"
            app:layout_constraintEnd_toStartOf="@+id/addFavButton"
            app:layout_constraintStart_toEndOf="@+id/addToPlaylistButton"
            app:layout_constraintTop_toBottomOf="@+id/durationSeekBar" />
        <TextView
            android:id="@+id/musicArtistTextBox"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="48dp"
            android:background="@android:color/transparent"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/default_artist"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/addFavButton"
            app:layout_constraintStart_toEndOf="@+id/addToPlaylistButton"
            app:layout_constraintTop_toBottomOf="@+id/musicTitleTextBox" />
        <Button
            android:id="@+id/addToPlaylistButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/add_to_playlist"
            app:layout_constraintBottom_toTopOf="@id/repeatButton"
            app:layout_constraintEnd_toStartOf="@+id/musicTitleTextBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/musicTitleTextBox" />
        <Button
            android:id="@+id/addFavButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/favorite_false"
            android:onClick="toggleFavorite"
            android:tag="@string/favorite_false"
            app:layout_constraintBottom_toTopOf="@id/shuffleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/musicTitleTextBox"
            app:layout_constraintTop_toTopOf="@+id/musicTitleTextBox" />
        <Button
            android:id="@+id/repeatButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/repeat_inactive"
            android:onClick="repeatToggle"
            android:tag="@string/repeat_inactive"
            app:layout_constraintEnd_toEndOf="@+id/addToPlaylistButton"
            app:layout_constraintStart_toStartOf="@+id/addToPlaylistButton"
            app:layout_constraintTop_toTopOf="@id/shuffleButton" />
        <Button
            android:id="@+id/shuffleButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shuffle_inactive"
            android:onClick="shuffleToggle"
            android:tag="@string/shuffle_inactive"
            app:layout_constraintEnd_toEndOf="@+id/addFavButton"
            app:layout_constraintStart_toStartOf="@+id/addFavButton"
            app:layout_constraintTop_toTopOf="@+id/repeatButton" />
        <Button
            android:id="@+id/skipPreviousButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/previous"
            android:onClick="skipPrevious"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playPauseToggleButton"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/playPauseToggleButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/play"
            android:onClick="togglePausePlay"
            android:tag="@string/paused_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/skipNextButton"
            app:layout_constraintStart_toEndOf="@+id/skipPreviousButton" />
        <Button
            android:id="@+id/skipNextButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/next"
            android:onClick="skipNext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playPauseToggleButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        app:behavior_peekHeight="48dp"
        app:behavior_skipCollapsed="true"
        android:id="@+id/filter_fragment"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:name="com.gaurav712.gigsmusic.PlaylistFragment" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>